--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
       white-space: nowrap;
       overflow: hidden;
       border-right: 4px solid #A855F7;
-      width: 22ch;
-      animation: typing 3s steps(22), blink 0.75s step-end infinite alternate;
+      width: 55ch; /* increased from 22ch */
+      animation: typing 4s steps(55), blink 0.75s step-end infinite alternate;
       margin: 1rem auto;
     }
-    @keyframes typing { from { width: 0 } to { width: 22ch } }
+    @keyframes typing { from { width: 0 } to { width: 55ch } }
+
     @keyframes blink { 50% { border-color: transparent } }
 
     /* Wave animation */
