--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ print(me.current_status())
 <footer class="text-center p-6 mt-10 bg-[#161B22]">
   <p>💡 "Building the future, one commit at a time"</p>
   <img src="https://capsule-render.vercel.app/api?type=waving&color=gradient&customColorList=12&height=50&section=footer" width="100%">
-  <p class="mt-2 text-sm">⚡ Last Updated: February 2026 | Thanks for visiting!</p>
+  <p class="mt-2 text-sm">Thanks for visiting!</p>
 </footer>
 
 <script>
