--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="twitter:image" content="https://saifullah10141.github.io/og-image.png">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="https://img.icons8.com/color/96/000000/code.png">
+    <link rel="icon" href="https://github.githubassets.com/favicons/favicon.svg" type="image/svg+xml">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
