--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <meta property="twitter:image" content="https://saifullah10141.github.io/og-image.png">
     
     <!-- Favicon -->
-    <link rel="icon" href="/favicon-dark.svg" media="(prefers-color-scheme: dark)">
-    <link rel="icon" href="/favicon-light.svg" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="https://github.githubassets.com/favicons/favicon.svg" type="image/svg+xml">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
